unified_tests/conversions/conversion_with_type_argument/expect/build.text.stderr
lib.copp:2:12: error: builtin conversion 'string' does not take type arguments
      return string[int64](1)
             ^
